# mobile_robots_utilities

./: .gitignore  CMakeLists.txt  README.md  continuous_angle.h  ramps.h  scaling.h  trajectories.h
examples/: continuous_angle_example.cpp  ramps_example.cpp  scaling_example.cpp  trajectories_example.cpp
